--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -11,13 +11,15 @@ Desktop: De 992px até 1200px;
 Grandes Telas: Acima de 1200px. 
 */
 
+/* Configuração para Tablet */
 @media only screen and (min-width: 768px) and (max-width: 992px) {
-    body {
+    body {  
         background-image: linear-gradient(to top, #49A09D, #5f2c82);
     }
 
     section#login {
         width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -32,6 +34,7 @@ Grandes Telas: Acima de 1200px.
     }
 }
 
+/* Configuração para Telas Grandes [DESKTOP] */
 @media only screen and (min-width: 992px) {
     body {
         background-image: linear-gradient(to top, #49A09D, #5f2c82);
@@ -39,6 +42,7 @@ Grandes Telas: Acima de 1200px.
 
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -57,6 +61,7 @@ Grandes Telas: Acima de 1200px.
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
